# dioxus

./: .gitignore  .justfile  Cargo.toml  flake.nix
rust/: flake.nix
test-app/: .gitignore  Cargo.toml  Dioxus.toml  README.md  icon.plist
test-app/assets/: main.css
test-app/src/: main.rs
